<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:text="@string/unitsForTargetCgpaTop"
            android:layout_width="match_parent"
            style="@style/ExplainMessage"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Titles"
            android:text="@string/currentCgpa"/>

        <EditText
            android:id="@+id/current_cgpa_edit_text_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"
            android:hint="@string/gpaBetween"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Titles"
            android:text="@string/totalUnitsAttempted"/>

        <EditText
            android:id="@+id/total_units_attempted_edit_text_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"
            android:inputType="number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Titles"
            android:text="@string/targetCgpa"/>

        <EditText
            android:id="@+id/target_cgpa_edit_text_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"
            android:hint="@string/gpaBetween"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Titles"
            android:text="@string/targetGPAForEachTerm"/>

        <EditText
            android:id="@+id/target_gpa_each_term_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"
            android:hint="@string/gpaBetween"
            android:inputType="numberDecimal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <Button
                android:id="@+id/calculate_button_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/calculate"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/reset_button_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/reset"
                android:textColor="#FFFFFF"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

