<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingTop="16dp"
              android:paddingLeft="16dp"
              android:paddingRight="16dp">

    <TextView
        android:text="@string/cgpaCalculatorTop"
        android:layout_width="match_parent"
        style="@style/ExplainMessage"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Titles"
        android:text="@string/currentCgpa"/>

    <EditText
        android:id="@+id/current_cgpa_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditText"
        android:hint="@string/gpaBetween"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Titles"
        android:text="@string/totalUnitsAttempted"/>

    <EditText
        android:id="@+id/total_units_attempted_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditText"
        android:inputType="number"/>

</LinearLayout>